# advent-of-code-2021

./: .gitignore  CMakeLists.txt  README.md
include/: catch2.hpp
lib/catch2/: CMakeLists.txt
resources/: CMakeLists.txt  resources.hpp.in
src/: StaticVector.hpp  StringView.cpp  StringView.hpp  day_1.cpp  day_2.cpp  day_3.cpp  main.cpp  narrow.hpp  utils.cpp  utils.hpp
tests/: main.cpp
